chores: gitignore .firebaserc

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ app.*.map.json
 *.g.dart
 
 # Firebase configuration files
+.firebaserc
 lib/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
 ios/firebase_app_id_file.json
