--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "portfolio",
-    "short_name": "portfolio",
+    "name": "Tolulope Christopher Olaniyan",
+    "short_name": "Tolulope C. Olaniyan",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Tolulope Christopher Olaniyan's portfolio",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
