--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,9 +47,10 @@ dependencies:
   envied: ^0.3.0+3
   firebase_core: ^2.14.0
   url_strategy: ^0.2.0
-  flutter_localizations:
-    sdk: flutter
   intl: ^0.18.0
+  easy_localization: ^3.0.2
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ dev_dependencies:
   custom_lint: ^0.4.0
   riverpod_lint: ^1.3.2
   riverpod_generator: ^2.2.3
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -83,6 +86,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - assets/images/
+    - assets/translations/
     
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
