--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = portfolio
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.portfolio
+PRODUCT_BUNDLE_IDENTIFIER = dev.aladdine.portfolio
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 dev.aladdine. All rights reserved.
