--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   easy_localization: ^3.0.2
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
