--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   flex_color_scheme: ^7.3.1
   google_fonts: ^5.1.0
   font_awesome_flutter: ^10.5.0
-  flutter_riverpod: ^2.3.7
   riverpod_annotation: ^2.1.2
   collection: ^1.17.2
   url_launcher: ^6.1.12
@@ -49,6 +48,8 @@ dependencies:
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.0
   easy_logger: ^0.0.2
+  hooks_riverpod: ^2.4.0
+  flutter_hooks: ^0.20.1
 
 dev_dependencies:
   flutter_test:
