--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   shared_preferences: ^2.2.1
+  firebase_core_desktop: ^1.0.2
 
 dev_dependencies:
   flutter_test:
