--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,3 +52,25 @@ flutter:
     - assets/translations/
     - assets/fonts/
 
+flutter_native_splash:
+  color: "#60a3d9"
+  image: "assets/images/spinner-light.apng"
+  color_dark: "#122035"
+  image_dark: "assets/images/spinner-dark.apng"
+  
+flutter_launcher_icons:
+  android: "ic_launcher"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/logo.png"
+  windows:
+    generate: true
+    image_path: "assets/images/logo.png"
+    icon_size: 256 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logo.png"
