--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Setup Flutter
         run: |
-          git clone https://github.com/flutter/flutter.git --depth 1 -b beta _flutter
+          git clone https://github.com/flutter/flutter.git --depth 1 -b stable _flutter
           echo "${GITHUB_WORKSPACE}/_flutter/bin" >> ${GITHUB_PATH}
 
       - name: Install
