--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_svg: ^2.0.10
   animated_toggle_switch: ^0.8.2
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
