--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,6 @@ dependencies:
 
   flex_color_scheme: ^7.3.1
   google_fonts: ^6.2.1
-  font_awesome_flutter: ^10.7.0
-  icons_plus: ^5.0.0
   riverpod_annotation: ^2.3.5
   hooks_riverpod: ^2.5.1
   flutter_hooks: ^0.20.5
@@ -50,9 +48,23 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/fonts/
+    - assets/icons/flags/
+    - assets/icons/other/
+    - assets/icons/software-development/
     - assets/images/
     - assets/translations/
-    - assets/fonts/
+
+  fonts:
+    - family: BoxIcons
+      fonts:
+        - asset: assets/fonts/BoxIcons.ttf
+    - family: FontAwesome
+      fonts:
+        - asset: assets/fonts/FontAwesome.ttf
+    - family: OctIcons
+      fonts:
+        - asset: assets/fonts/OctIcons.ttf
 
 flutter_native_splash:
   color: "#60a3d9"
